add to gitignore and modified a hidden page.

--- a/pagenotfound.html
+++ b/pagenotfound.html
@@ -7,8 +7,8 @@
 	</head>
 	
 	<body>
-	<h1>We are Untitled</h1>
-	<a href="grabdathome.html" target="_self"> Page not found. Click here to 
+	<h1>You have stumbled upon the wrong page</h1>
+	<a href="www.grabdattaco.com" target="_self"> Page not found. Click here to 
 	return to the previous page </a>
 	<div class="body1"></div>
 	</body>
